--- a/estilos_app.css
+++ b/estilos_app.css
@@ -576,7 +576,7 @@ body {
 .header-perfil {
 	position: relative;
 	/* display: inline-block; */
-	top: 0;
+	top: 0px !important;
 	width: 100%;
 	background-color: #45AFFF;
 	border-top-left-radius: 15px;
