--- a/estilos_app.css
+++ b/estilos_app.css
@@ -67,7 +67,7 @@ body {
 .header .boton_abrir_menu {
 	height: 45px;
 	width: 45px;
-	background-color: #333333;
+	/* background-color: #333333; */
 	border-radius: 50%;
 	cursor: pointer;
 	display: flex;
@@ -554,14 +554,15 @@ body {
 }
 
 .container-info {
+	display: flex;
 	padding: 50px;
-	margin: auto;
 	justify-content: center;
 	padding-top: 110px;
 }
 
 .container {
-	box-shadow: 1px 1px 1px 1px #d1d1d1;
+	width: 60%;
+	box-shadow: 1px 1px 6px 1px #d1d1d1;
 	border-radius: 15px;
 }
 
@@ -575,7 +576,6 @@ body {
 
 .header-perfil {
 	position: relative;
-	/* display: inline-block; */
 	top: 0px !important;
 	width: 100%;
 	background-color: #45AFFF;
@@ -585,6 +585,7 @@ body {
 	justify-content: center;
 	align-items: center;
 	text-align: center;
+	color: #FFFFFF;
 }
 
 .profile-pic {
@@ -619,6 +620,7 @@ body {
 }
 
 .save-btn {
+	position: relative;
     background-color: #4a6fa5;
     color: white;
     border: none;
@@ -627,5 +629,28 @@ body {
     cursor: pointer;
     font-size: 16px;
     display: block;
-	/* margin: 30px auto 0; */
+	top: -20px;
+	left: 20px
+}
+
+.section-title {
+    font-size: 20px;
+    color: #4a6fa5;
+    margin-bottom: 15px;
+    padding-bottom: 5px;
+    border-bottom: 2px solid #e4e4e4;
+}
+
+.section {
+    margin-bottom: 30px;
+}
+
+.info-label {
+    font-weight: bold;
+    width: 120px;
+    color: #666;
+}
+
+.info-item {
+	display: flex;
 }
